# inventory_management_system

./: .flattened-pom.xml  docker-compose.yaml  pom.xml
.github/workflows/: build.yaml
migrations/: migration.bat  migration.sh  mysql.schemas.sql  mysql.seeders.sql  pgsql.schemas.sql  pyproject.toml  sqlpl.schemas.sql
src/main/java/: module-info.java
src/main/java/com/lestarieragemilang/: App.java  Category.java  CategoryForm.java  Customer.java  CustomerForm.java  Dashboard.java  Login.java  Purchasing.java  PurchasingController.java  PurchasingForm.java  PurchasingFormController.java  Stock.java  StockController.java  StockForm.java  StockFormController.java  Supplier.java  SupplierController.java  SupplierForm.java
src/main/java/com/lestarieragemilang/Configurations/: DatabaseConfiguration.java
src/main/java/com/lestarieragemilang/Entities/: CategoryEntity.java  CustomerEntity.java  Product.java  PurchasingEntity.java  StockEntity.java  SupplierEntity.java
src/main/java/com/lestarieragemilang/Repositories/: AuthRepositories.java  CategoryRepositories.java  CustomerRepositories.java  PurchasingRepositories.java  StockRepositories.java  SupplierRepositories.java  SupplierRepositoriesTest.java
src/main/java/com/lestarieragemilang/Utilities/: CacheService.java  Redirect.java
src/main/resources/com/lestarieragemilang/: category.fxml  categoryForm.fxml  customer.fxml  customerForm.fxml  dashboard.fxml  kategori.fxml  laporan.fxml  login.fxml  pembelian.fxml  penerimaan.fxml  purchasingForm.fxml  stock.fxml  style.css  supplier.fxml  supplierForm.fxml
