[tool.poetry]
name = "pemvis-database"
version = "0.1.0"
description = "Visual Programming Assignment"
authors = ["belajarqywok <belajarqywok@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
